fixed some errors on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 body {
     /* #1c1a1a - #08050a */
     background-color: #1059cf;
-    color: #fafaf9;
+    color: #E1E8ED;
     font-family: "Sono", sans-serif;
     padding: 48px 64px 0px;
 }
@@ -73,19 +73,17 @@ section {
 h1 {
     font-size: 40px;
     text-transform: uppercase;
-    font-family: "Coiny", sans-serif, Arial;
+    font-family: sans-serif, Arial;
     line-height: 1;
     margin-top: 6px;
-}
-
-h2 {
-    color: #fafaf9;
+    color: inherit;
+    align-items: center;
 }
 
 /* FORM */
 .fill-form {
     border-radius: 20px;
-    background-color: #090807;
+    background-color: #14171A;
     padding: 16px 40px;
     margin-bottom: 40px;
     gap: 10px;
@@ -157,6 +155,7 @@ label {
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-shrink: 0;
     align-self: self-start;
     justify-content: space-between;
     color: #aaaaaa;
@@ -181,7 +180,7 @@ label {
 
 .hashtag {
     padding-right: 5px;
-    color: #3f4d9a;
+    color: #1059cf;
 
 }
 
@@ -190,7 +189,7 @@ label {
     text-transform: uppercase;
     font-size: 14px;
     font-family: "Sono", sans-serif, Arial;
-    background-color: #3f4d9a;
+    background-color: #1059cf;
     padding-top: 3px;
     padding-left: 10px;
     padding-right: 10px;
@@ -200,8 +199,8 @@ label {
 .priority-tag {
     font-size: 14px;
     font-weight: 600;
-    margin-right: 10px;
-    color: #9ba9f7;
+    margin-right: 5px;
+    color: #1059cf;
 }
 
 .btn {
@@ -280,9 +279,9 @@ ul {
     width: 100%;
 
     margin-bottom: 10px;
-    background-color: #eef7ff;
+    background-color: #E1E8ED;
     padding: 15px;
-    color: #000;
+    color: #14171A;
     border-radius: 5px;
     transition: opacity 0.5s ease;
 }
@@ -338,14 +337,23 @@ ul {
 }
 
 @media (max-width: 600px) {
+    body {
+        /* #1c1a1a - #08050a - 1DA1F2*/
+        background-color: #1059cf;
+        color: #fafaf9;
+        font-family: "Sono", sans-serif;
+        padding: 10px 15px 0px;
+    }
+
     .header {
         flex-direction: column;
+        align-self: center;
         gap: 16px;
     }
 
     .fill-form {
         border-radius: 20px;
-        background-color: #090807;
+        background-color: #14171A;
         padding: 20px;
         margin-bottom: 20px;
         display: grid;
@@ -358,18 +366,50 @@ ul {
 
     h1 {
         font-size: 20px;
+        margin: 0;
+    }
+
+    .post-details {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        align-self: self-start;
+        justify-content: space-between;
+        color: #AAB8C2;
+        font-size: 16px;
+        font-weight: 600;
     }
 
     .fill-form input,
     .fill-form select,
     .fill-form textarea {
-        outline: none;
-        border: none;
         width: 100%;
         padding: 10px;
-        font-family: inherit;
-        font-size: 15px;
+        height: 50px;
+        background-color: #E1E8ED;
+    }
+
+    .pop-up button {
+        width: 25px;
+        height: 25px;
+        padding: 10px;
+        margin: 3px;
+    }
+
+    .pop-up {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        flex-shrink: 0;
+        gap: 10px;
+        width: 100%;
+
+        margin-bottom: 10px;
+        background-color: #E1E8ED;
+        padding: 10px;
+        color: #14171A;
         border-radius: 5px;
-        color: #292524;
+        transition: opacity 0.5s ease;
     }
 }
